<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/paddingLeft"
    android:paddingTop="@dimen/paddingTop_registro"
    android:paddingRight="@dimen/paddingRight"
    tools:context=".ActivityRegistro">

    <requestFocus />


    <!-- <com.facebook.login.widget.LoginButton
        android:id="@+id/btnFacebookIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/paddingredes"
        android:layout_marginBottom="@dimen/paddingredesbtn" /> -->

    <!--<com.google.android.gms.common.SignInButton
        android:id="@+id/googleIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />-->

    <TextView
        android:id="@+id/txt_accionuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/paddingenteBotones"
        android:fontFamily="@font/eproundie"
        android:text="@string/siginemail"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/txtTitulos" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/paddingenteBotones"
        android:layout_marginBottom="@dimen/text_input_layout_padding_top"
        android:textColorHint="@color/colorAccent"
        android:theme="@style/TextLabel"
        app:hintTextAppearance="@style/TextInputLayout">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tuemail"
            android:inputType="textEmailAddress"
            android:shadowColor="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_layout_padding_top"
        android:textColorHint="@color/colorAccent"
        android:theme="@style/TextLabel"
        app:hintTextAppearance="@style/TextInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/psw"
            android:inputType="textPassword"
            android:shadowColor="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_layout_padding_top"
        android:background="@drawable/buttonngresar"
        android:text="REGISTRARME"
        android:textColor="@color/white"
        android:textSize="@dimen/app_compat_button_text_size"
        android:theme="@style/AppTheme.MyButton" />

    <Button
        android:id="@+id/txt_olvide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_layout_padding_top"
        android:background="@drawable/buttonshapebordes"
        android:fontFamily="@font/eproundie"
        android:text="@string/olvidecontrasena"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_quienes_somos" />

    <TextView
        android:id="@+id/politica"
        style="@style/AppTheme.font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_layout_padding_top"
        android:layout_marginBottom="@dimen/paddingenteBotones"
        android:text="@string/politicas"
        android:textSize="@dimen/text_size_activity_datos" />

</LinearLayout>